# oasees-sdk

./: PKG-INFO  README.md  pyproject.toml
.github/workflows/: main.yml  release.yml
cli/: cli.py  oasees_ml_ops.py
oasees_sdk/: sdk.py  training_workload.py  utility_functions.py
oasees_sdk/mlops/: util_files.py
src/oasees_sdk/cli/: cli.py  ipfs_client.py
src/oasees_sdk/cli/commands/: display_banner.py  jupyter_templating.py  mlops.py  telemetry.py  update.py
src/oasees_sdk/oasees_sdk/: deploy_pipeline.py  sdk.py  utility_functions.py
src/oasees_sdk/oasees_sdk/mlops/: env_vars.py  ml_template.py  templating_functions.py  util_files.py
