[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "oasees_sdk"
version = "0.6.1"
description = "Oasees SDK"
authors = [
    "Achilleas Economopoulos",
    "Andreas Oikonomakis",
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
Click="*"
requests="*"
python-dotenv="*"
kubernetes="*"
jupytext="*"
ipylab="*"
numpy="1.26.4"


[tool.poetry.plugins."console_scripts"]
oasees-sdk = "oasees_sdk.cli.cli:cli"
